Ticket: #No-Ticket SubTicket: # Component: Changes: 1.Fix the bug there will be an x axle overflow in Scheduler on Firefox. 2.Fix an error in console.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/page.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/page.less
@@ -171,6 +171,9 @@ body,
 
 				.kendoscheduler {
 					height: 100%;
+					.k-scheduler-content {
+						overflow-x: hidden;
+					}
 				}
 
 				.k-nav-current > .k-link span + span {
